Add Backend extension files